--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@types/aos": "^3.0.7",
+    "aos": "^2.3.4",
+    "framer-motion": "^12.23.24",
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
+    "react-tilt": "^1.0.2",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
